11.5 Add 3 button (Добавили 3 кноки в ссылку для проверки отзывов для быстрых переходов)